using style reset
created folder for css and a reset css file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>NASA: Planetary Exploration</title>
-<link rel="stylesheet" type="text/css" href="css/xxxxxxxxx.css">
+<link rel="stylesheet" type="text/css" href="css/style-reset.css">
 </head>
 <body>
 <h1>The Solar System Beyond Earth</h1>
