--- a/index.html
+++ b/index.html
@@ -7,7 +7,65 @@
 </head>
 <body>
 <h1>The Solar System Beyond Earth</h1>
-<h2>Where should we go when earth cannot sustain our population</h2>
+<h2>EMERGENCY BROADCAST ALERT:</h2>
+<p>The Government issued an immediate plan of action to evacuate Earth, below are planets in which 
+I have done extensive research. It's your choice to review the properties of each planet. Choose wisely and 
+may God Speed</p>
 
+<section>
+<table>
+  <colgroup span="8"></colgroup>
+  <tr>
+    <th>Planet Body</th>
+    <th>Mass</th>
+    <th>Diameter</th>
+    <th>Mean Density</th>
+		<th>Escape Velocity</th>
+		<th>Avg. Dist. from the Sun</th>
+		<th>Rotation Period</th>
+		<th>Revolution Period</th>
+  </tr>
+  <tr>
+    <td>Mars</td>
+    <td>null</td>
+    <td>null</td>
+    <td>null</td>
+		<td>null</td>
+    <td>null</td>
+    <td>null</td>
+		<td>null</td>
+  </tr>
+  <tr>
+    <td>Saturn</td>
+    <td>null</td>
+    <td>null</td>
+    <td>null</td>
+		<td>null</td>
+    <td>null</td>
+    <td>null</td>
+		<td>null</td>
+  </tr>
+	<tr>
+    <td>Mercury</td>
+    <td>null</td>
+    <td>null</td>
+    <td>null</td>
+		<td>null</td>
+    <td>null</td>
+    <td>null</td>
+		<td>null</td>
+  </tr>
+	<tr>
+    <td>Neptune</td>
+    <td>null</td>
+    <td>null</td>
+    <td>null</td>
+		<td>null</td>
+    <td>null</td>
+    <td>null</td>
+		<td>null</td>
+  </tr>
+</table>
+</section>
 </body>
 </html>
