adding more gifs
i would like these to be in one row

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <p>The Government issued an immediate plan of action to evacuate Earth, below are planets in which 
 I have done extensive research. It's your choice to review the properties of each planet. Choose wisely and 
 may God Speed</p>
+<section>
 <img src="gifs/mars.gif" alt="Mars">
+<img src="gifs/saturn.gif" alt="Saturn">
+<img src="gifs/mercury.gif" alt="Mercury">
+<img src="gifs/neptune.gif" alt="Neptune">
+</section>
 <section>
 <table>
   <colgroup span="8"></colgroup>
