--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ may God Speed</p>
   </tr>
   <tr>
     <td>Mars</td>
-    <td>null</td>
-    <td>null</td>
-    <td>null</td>
-		<td>null</td>
-    <td>null</td>
-    <td>null</td>
-		<td>null</td>
+    <td>6.42 x 10<sup>23</sup></td>
+    <td>6787</td>
+    <td>3940</td>
+		<td>5000</td>
+    <td>1.524 AU (227,936,640 km)</td>
+    <td>1.026</td>
+		<td>686.98</td>
   </tr>
   <tr>
     <td>Saturn</td>
