data for planets
entering the data for my chosen planets

--- a/index.html
+++ b/index.html
@@ -42,33 +42,33 @@ may God Speed</p>
   </tr>
   <tr>
     <td>Saturn</td>
-    <td>null</td>
-    <td>null</td>
-    <td>null</td>
-		<td>null</td>
-    <td>null</td>
-    <td>null</td>
-		<td>null</td>
+    <td>5.69 x 10<sup>26</sup></td>
+    <td>120660</td>
+    <td>690</td>
+		<td>35600</td>
+    <td>9.537 AU (1,426,725,400 km)</td>
+    <td>0.44 (10.2 Earth hours)</td>
+		<td>29.46</td>
   </tr>
 	<tr>
     <td>Mercury</td>
-    <td>null</td>
-    <td>null</td>
-    <td>null</td>
-		<td>null</td>
-    <td>null</td>
-    <td>null</td>
-		<td>null</td>
+    <td>3.3 x 10<sup>23</sup></td>
+    <td>4879.4</td>
+    <td>5420</td>
+		<td>4300</td>
+    <td>0.387 AU (57,909,175 km)</td>
+    <td>58.65</td>
+		<td>87.97</td>
   </tr>
 	<tr>
     <td>Neptune</td>
-    <td>null</td>
-    <td>null</td>
-    <td>null</td>
-		<td>null</td>
-    <td>null</td>
-    <td>null</td>
-		<td>null</td>
+    <td>1.02 x 10<sup>26</sup></td>
+    <td>49528</td>
+    <td>1640</td>
+		<td>23300</td>
+    <td>30.07 AU (4,498,252,900 km)</td>
+    <td>0.67 (19.1 hours)</td>
+		<td>60,190 (164.8 Earth years)</td>
   </tr>
 </table>
 </section>
