--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
 	<title>NASA: Planetary Exploration</title>
 <link rel="stylesheet" type="text/css" href="css/style-reset.css">
+<link rel="stylesheet" type="text/css" href="css/tbl-css.css">
 </head>
-<body>
+<body id="fontbody">
 <h1>The Solar System Beyond Earth</h1>
 <h2>EMERGENCY BROADCAST ALERT:</h2>
 <p>The Government issued an immediate plan of action to evacuate Earth, below are planets in which 
@@ -17,15 +18,15 @@ may God Speed</p>
 <img src="gifs/mercury.gif" alt="Mercury">
 <img src="gifs/neptune.gif" alt="Neptune">
 </section>
-<section>
+<section  id="tblfont">
 <table>
   <colgroup span="8"></colgroup>
   <tr>
     <th>Planet Body</th>
-    <th>Mass</th>
-    <th>Diameter</th>
-    <th>Mean Density</th>
-		<th>Escape Velocity</th>
+    <th>Mass (kg)</th>
+    <th>Diameter (km)</th>
+    <th>Mean Density (kg/m3)</th>
+		<th>Escape Velocity (m/s)</th>
 		<th>Avg. Dist. from the Sun</th>
 		<th>Rotation Period</th>
 		<th>Revolution Period</th>
