--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 I have done extensive research. It's your choice to review the properties of each planet. Choose wisely and 
 may God Speed</p>
 <section>
-<img src="gifs/mars.gif" alt="Mars">
+<img id="mars" src="gifs/mars.gif" alt="Mars">
 <img src="gifs/saturn.gif" alt="Saturn">
 <img src="gifs/mercury.gif" alt="Mercury">
 <img src="gifs/neptune.gif" alt="Neptune">
