setting table margin
seperating table from gifs

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ I have done extensive research. It's your choice to review the properties of eac
 may God Speed</p>
 <section>
 <img id="mars" src="gifs/mars.gif" alt="Mars">
-<img src="gifs/saturn.gif" alt="Saturn">
-<img src="gifs/mercury.gif" alt="Mercury">
-<img src="gifs/neptune.gif" alt="Neptune">
+<img id="saturn" src="gifs/saturn.gif" alt="Saturn">
+<img id="mercury" src="gifs/mercury.gif" alt="Mercury">
+<img id="neptune" src="gifs/neptune.gif" alt="Neptune">
 </section>
 <section  id="tblfont">
 <table>
