image in the table
testing image in the table to see how it looks

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ may God Speed</p>
 		<th>Revolution Period</th>
   </tr>
   <tr>
-    <td>Mars</td>
+    <td><img src="images/mars.PNG" alt="Mars"></td>
     <td>6.42 x 10<sup>23</sup></td>
     <td>6787</td>
     <td>3940</td>
