inserting img in table
putting images vs text for planet name

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ may God Speed</p>
 		<td>686.98</td>
   </tr>
   <tr>
-    <td>Saturn</td>
+    <td><img src="images/saturn.PNG" alt="Saturn"></td>
     <td>5.69 x 10<sup>26</sup></td>
     <td>120660</td>
     <td>690</td>
@@ -52,7 +52,7 @@ may God Speed</p>
 		<td>29.46</td>
   </tr>
 	<tr>
-    <td>Mercury</td>
+    <td><img src="images/mercury.PNG" alt="Mercury"></td>
     <td>3.3 x 10<sup>23</sup></td>
     <td>4879.4</td>
     <td>5420</td>
@@ -62,7 +62,7 @@ may God Speed</p>
 		<td>87.97</td>
   </tr>
 	<tr>
-    <td>Neptune</td>
+    <td><img src="images/neptune.PNG" alt="Neptune"></td>
     <td>1.02 x 10<sup>26</sup></td>
     <td>49528</td>
     <td>1640</td>
