--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ may God Speed</p>
     <td>690</td>
 		<td>35600</td>
     <td>9.537 AU (1,426,725,400 km)</td>
-    <td>0.44 (10.2 Earth hours)</td>
+    <td>0.44  (10.2 earth hours)</td>
 		<td>29.46</td>
   </tr>
 	<tr>
@@ -57,7 +57,7 @@ may God Speed</p>
     <td>4879.4</td>
     <td>5420</td>
 		<td>4300</td>
-    <td>0.387  AU(57,909,175 km)</td>
+    <td>0.387  AU (57,909,175 km)</td>
     <td>58.65</td>
 		<td>87.97</td>
   </tr>
@@ -68,7 +68,7 @@ may God Speed</p>
     <td>1640</td>
 		<td>23300</td>
     <td>30.07 AU (4,498,252,900 km)</td>
-    <td>0.67 (19.1 hours)</td>
+    <td>0.67  (19.1 hours)</td>
 		<td>60,190 (164.8 Earth years)</td>
   </tr>
 </table>
