adding to my emergency alert
created a small story for why i have presented this table along with bigger font

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body id="fontbody">
 <h1>The Solar System Beyond Earth</h1>
 <h2>EMERGENCY BROADCAST ALERT:</h2>
-<p>The Government issued an immediate plan of action to evacuate Earth, below are planets in which 
-I have done extensive research. It's your choice to review the properties of each planet. Choose wisely and 
-may God Speed</p>
+<a href="http://www.independent.co.uk/news/science/first-interstellar-object-beyond-solar-system-university-of-hawaii-institute-for-astronomy-nasa-jet-a8022531.html">
+<img src="images/asteroid.jpg" alt="Asteroid">
+</a>
+<p>The very first interstellar Asteroid has just headed to earth, We have been visited by another
+Solar System and this is a sign to start doing research on what planet to visit next. We are not
+alone and we have limited time to choose our next planet. It is up to you to review the following
+research and bring humanity to interstellar travel, SUIT UP! and May God Speed.</p>
 <section>
 <img id="mars" src="gifs/mars.gif" alt="Mars">
 <img id="saturn" src="gifs/saturn.gif" alt="Saturn">
