--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <h1>The Solar System Beyond Earth</h1>
 <h2>EMERGENCY BROADCAST ALERT:</h2>
 <a href="http://www.independent.co.uk/news/science/first-interstellar-object-beyond-solar-system-university-of-hawaii-institute-for-astronomy-nasa-jet-a8022531.html">
-<img src="images/asteroid.jpg" alt="Asteroid">
+<img id="rock" src="images/asteroid.jpg" alt="Asteroid">
 </a>
-<p>The very first interstellar Asteroid has just headed to earth, We have been visited by another
-Solar System and this is a sign to start doing research on what planet to visit next. We are not
-alone and we have limited time to choose our next planet. It is up to you to review the following
+<p>The very first interstellar Asteroid just missed earth at Alarming Speeds. We have been visited 
+by another Solar System and this is the very first encounter of another solar system. Scientists 
+have taken this as a sign to start doing research on what planet to visit next. We are not alone 
+and we have limited time to choose our next planet. It is up to you to review the following
 research and bring humanity to interstellar travel, SUIT UP! and May God Speed.</p>
 <section>
 <img id="mars" src="gifs/mars.gif" alt="Mars">
