--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
 <link rel="stylesheet" type="text/css" href="css/tbl-css.css">
 </head>
 <body id="fontbody">
-<h1>The Solar System Beyond Earth</h1>
+<h1>A Solar System Beyond Earth</h1>
 <h2>EMERGENCY BROADCAST ALERT:</h2>
 <a href="http://www.independent.co.uk/news/science/first-interstellar-object-beyond-solar-system-university-of-hawaii-institute-for-astronomy-nasa-jet-a8022531.html">
 <img id="rock" src="images/asteroid.jpg" alt="Asteroid">
 </a>
-<p>The very first interstellar Asteroid just missed earth at Alarming Speeds. We have been visited 
-by another Solar System and this is the very first encounter of another solar system. Scientists 
-have taken this as a sign to start doing research on what planet to visit next. We are not alone 
-and we have limited time to choose our next planet. It is up to you to review the following
-research and bring humanity to interstellar travel, SUIT UP! and May God Speed.</p>
+<p>A Hyperbolic asteroid has just grazed earth's orbit at an alarming 25.5 kilometres per second 
+The very first interstellar encounter of our time. The Asteroid is from another Solar System and this 
+Due to the circumstances scientists have taken precautionary measures and extensive research 
+is being conducted for our interstellar travels. We have limited time to choose our next planet, It is 
+up to you to review the following research, the world is counting on you.</p>
+<p>SUIT UP! and May God Speed.</p>
 <section>
 <img id="mars" src="gifs/mars.gif" alt="Mars">
 <img id="saturn" src="gifs/saturn.gif" alt="Saturn">
@@ -78,5 +79,9 @@ research and bring humanity to interstellar travel, SUIT UP! and May God Speed.<
   </tr>
 </table>
 </section>
+<p>MARS-FACT#1
+Like Earth, Mars has tempatured seasons but because of it's high eleptical orbit it goes thru colder 
+winters and hotter summers. The average tempature is -80 degrees to 70 degrees F.   
+</p>
 </body>
 </html>
