3 facts for mars
giving mars 3 quick facts

--- a/index.html
+++ b/index.html
@@ -79,9 +79,19 @@ up to you to review the following research, the world is counting on you.</p>
   </tr>
 </table>
 </section>
-<p>MARS-FACT#1
+<section>
+<p>MARS-FACT #1
 Like Earth, Mars has tempatured seasons but because of it's high eleptical orbit it goes thru colder 
 winters and hotter summers. The average tempature is -80 degrees to 70 degrees F.   
 </p>
+<p>MARS-FACT #2
+1 year on mars will be nearly double what we experience on Earth, about 1.88 years and 1 day will be
+24 hours and 40 minutes. Sending messages back to earth will take 15 minutes  
+</p>
+<p>MARS-FACT #3
+Mars has no magnetic field or thick atmosphere to protect us from the suns radiation and Mars also 
+has frequent dust storms. 
+</p>
+</section>
 </body>
 </html>
