border radius for facts
i plan to put a border radius on each planets facts

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ up to you to review the following research, the world is counting on you.</p>
   </tr>
 </table>
 </section>
-<section>
+<section id="marsfaq">
 <p>MARS-FACT #1
 Like Earth, Mars has tempatured seasons but because of it's high eleptical orbit it goes thru colder 
 winters and hotter summers. The average tempature is -80 degrees to 70 degrees F.   
