changing section to div
section was changed to div tag to avoid html warnings

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@ Due to the circumstances scientists have taken precautionary measures and extens
 is being conducted for our interstellar travels. We have limited time to choose our next planet, It is 
 up to you to review the following research, the world is counting on you.</p>
 <p>SUIT UP! and May God Speed.</p>
-<section>
+<div>
 <img id="mars" src="gifs/mars.gif" alt="Mars">
 <img id="saturn" src="gifs/saturn.gif" alt="Saturn">
 <img id="mercury" src="gifs/mercury.gif" alt="Mercury">
 <img id="neptune" src="gifs/neptune.gif" alt="Neptune">
-</section>
+</div>
 <section  id="tblfont">
+<h2>Planets Under Consideration</h2>
 <table>
   <colgroup span="8"></colgroup>
   <tr>
@@ -79,7 +80,7 @@ up to you to review the following research, the world is counting on you.</p>
   </tr>
 </table>
 </section>
-<section id="marsfaq">
+<div id="marsfaq">
 <p>MARS-FACT #1
 Like Earth, Mars has tempatured seasons but because of it's high eleptical orbit it goes thru colder 
 winters and hotter summers. The average tempature is -80 degrees to 70 degrees F.   
@@ -92,6 +93,6 @@ winters and hotter summers. The average tempature is -80 degrees to 70 degrees F
 Mars has no magnetic field or thick atmosphere to protect us from the suns radiation and Mars also 
 has frequent dust storms. 
 </p>
-</section>
+</div>
 </body>
 </html>
