--- a/index.html
+++ b/index.html
@@ -94,5 +94,19 @@ Mars has no magnetic field or thick atmosphere to protect us from the suns radia
 has frequent dust storms. 
 </p>
 </div>
+<div id="saturnfaq">
+<p>MARS-FACT #1
+Like Earth, Mars has tempatured seasons but because of it's high eleptical orbit it goes thru colder 
+winters and hotter summers. The average tempature is -80 degrees to 70 degrees F.   
+</p>
+<p>MARS-FACT #2
+1 year on mars will be nearly double what we experience on Earth, about 1.88 years and 1 day will be
+24 hours and 40 minutes. Sending messages back to earth will take 15 minutes  
+</p>
+<p>MARS-FACT #3
+Mars has no magnetic field or thick atmosphere to protect us from the suns radiation and Mars also 
+has frequent dust storms. 
+</p>
+</div>
 </body>
 </html>
