--- a/index.html
+++ b/index.html
@@ -95,17 +95,19 @@ has frequent dust storms.
 </p>
 </div>
 <div id="saturnfaq">
-<p>MARS-FACT #1
-Like Earth, Mars has tempatured seasons but because of it's high eleptical orbit it goes thru colder 
-winters and hotter summers. The average tempature is -80 degrees to 70 degrees F.   
+<p>SATURN-FACT #1
+Saturn has no surface to land or walk on, you would actually float continuously once you reach a 
+certain point considering your suit is heat resistant to about 10,000 degrees celsius. 
 </p>
-<p>MARS-FACT #2
-1 year on mars will be nearly double what we experience on Earth, about 1.88 years and 1 day will be
-24 hours and 40 minutes. Sending messages back to earth will take 15 minutes  
+<p>SATURN-FACT #2
+Gravity on Saturn is 107% Earths surface gravity, A 100lb person would weight 107lbs. In the long run
+if you make it back to earth you would be stronger but shorter but wouldn't feel the difference on 
+saturn.
 </p>
-<p>MARS-FACT #3
-Mars has no magnetic field or thick atmosphere to protect us from the suns radiation and Mars also 
-has frequent dust storms. 
+<p>SATURN-FACT #3
+The point at which you float is a body of Liquid Hydrogen Metal that has the same density as your body
+which allows you to float. This Liquid Hydrogen Metal is mirror like and reflects light so diving into
+it will be like swimming in a liquid mirror like that Matrix scene. 
 </p>
 </div>
 </body>
