--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="css/tbl-css.css">
 </head>
 <body id="fontbody">
+<section>
 <h1>A Solar System Beyond Earth</h1>
 <h2>EMERGENCY BROADCAST ALERT:</h2>
 <a href="http://www.independent.co.uk/news/science/first-interstellar-object-beyond-solar-system-university-of-hawaii-institute-for-astronomy-nasa-jet-a8022531.html">
@@ -108,6 +109,38 @@ saturn.
 The point at which you float is a body of Liquid Hydrogen Metal that has the same density as your body
 which allows you to float. This Liquid Hydrogen Metal is mirror like and reflects light so diving into
 it will be like swimming in a liquid mirror like that Matrix scene. 
+</p>
+</div>
+<div id="mercuryfaq">
+<p>MERCURY-FACT #1
+Gravity is significantly lower on Mercury, about 0.38% Earths surface gravity. So If you where trying 
+to lose weight then a 200lb person would now be 76lbs. Might as well try out for the NBA and bring the
+Bulls a championship.  
+</p>
+<p>MERCURY-FACT #2
+Mercury has no atmosphere and because of that you won't experience any type of weather disasters but
+is still prone to earthquakes additionally the sky will be black and not blue.
+</p>
+<p>MERCURY-FACT #3
+One day on Mercury will last 59 Earth Days but one year will span 88 Earth Days. This is because of a 
+spin-orbit resonance of 3:2. Mercury makes three full rotations on its axis for every two orbits 
+it makes around the Sun.
+</p>
+</div>
+</div>
+<div id="neptunefaq">
+<p>NEPTUNE-FACT #1
+A typical Neptune day is about 16 hours long but travel into more central regions of the planet and
+you will experience 18 hour days, Technically I guess that's time travel.  
+</p>
+<p>NEPTUNE-FACT #2
+Forecast on Neptune is a typical frigid -330 F day and night with icy rain like conditions and winds
+as fast as 1500 MPH so try not to catch a breeze unless you plan to get away Southwest Airlines style.
+</p>
+<p>NEPTUNE-FACT #3
+Neptune is 60 to 70% ice because of it's lack of energy from the sun and has thin rings around the 
+planet but for being so icy you'd expect it to be solid ice but the core is actually hotter than the 
+suns surface.
 </p>
 </div>
 </body>
