--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <img id="rock" src="images/asteroid.jpg" alt="Asteroid">
 </a>
 <p>A Hyperbolic asteroid has just grazed earth's orbit at an alarming 25.5 kilometres per second 
-The very first interstellar encounter of our time. The Asteroid is from another Solar System and this 
-Due to the circumstances scientists have taken precautionary measures and extensive research 
-is being conducted for our interstellar travels. We have limited time to choose our next planet, It is 
-up to you to review the following research, the world is counting on you.</p>
+The very first interstellar encounter of our time. This Asteroid apears to be from another Solar 
+System and due to the circumstances scientists have taken precautionary measures and extensive 
+research is being conducted for our interstellar travels. We have limited time to choose our next 
+planet. It is up to you to review the following research, the world is counting on you.</p>
 <p>SUIT UP! and May God Speed.</p>
 <div>
 <img id="mars" src="gifs/mars.gif" alt="Mars">
