--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ planet. It is up to you to review the following research, the world is counting 
 <img id="mercury" src="gifs/mercury.gif" alt="Mercury">
 <img id="neptune" src="gifs/neptune.gif" alt="Neptune">
 </div>
+</section>
 <section  id="tblfont">
 <h2>Planets Under Consideration</h2>
 <table>
