--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ planet. It is up to you to review the following research, the world is counting 
 		<th>Revolution Period</th>
   </tr>
   <tr>
-    <td><img src="images/mars.PNG" alt="Mars"></td>
+    <td><img src="images/mars.png" alt="Mars"></td>
     <td>6.42x10<sup>23</sup></td>
     <td>6787</td>
     <td>3940</td>
